--- a/ref.bib
+++ b/ref.bib
@@ -57,7 +57,7 @@ month={April},}
         howpublished = "\url{http://www.cray.com/products/storage/datawarp}",
 }
 
-@MISC{BBUseCase,
+MISC{BBUseCase,
         title = {{Trinity/NERSC-8 Use Case Scenarios}},
         howpublished = "\url{https://www.nersc.gov/assets/Trinity--NERSC-8-RFP/Documents/trinity-NERSC8-use-case-v1.2a.pdf}",
 }
