--- a/scheduler.tex
+++ b/scheduler.tex
@@ -117,8 +117,8 @@ is equivalent to the 0-1 knapsack problem, which is NP-hard.
 We use dynamic programming to solve it in pseudo-polynomial time.
 Memorization technique is applied in order to accelerate the solving process.
 The recursive relationship used in our solution is given by \equref{Equ:MaxTransferDataRecursion}.
-Solving \equref{Equ:MaxTransferDataRecursion} and 
-backtracking $\mathcal{J}_{Q_I}$ or $\mathcal{J}_{Q_O}$ in total take time proportional to $n\times BB$.
+The time complexity of solving \equref{Equ:MaxTransferDataRecursion} and 
+backtracking $\mathcal{J}_{Q_I}$ or $\mathcal{J}_{Q_O}$ is $O(n\times BB)$.
 
 
 \subsection{Scheduling in the Running Phase}
