--- a/simulation.tex
+++ b/simulation.tex
@@ -136,10 +136,10 @@ The allocated resources are released at the following time points:
 
 
 BBSim simulates a burst-buffer-enabled HPC system, as shown in Figure~\ref{Fig:BBArchitecture}.
-This system architecture is inspired by Trinity~\cite{TrinitySystem}, 
+This system architecture is inspired by Trinity, 
 the next generation supercomputer in Los Alamos National Laboratory.
 The parameters used in our simulation are taken from the 
-Trinity/NERSC-8 Use Case Scenarios technical report\cite{BBUseCase}.
+Trinity/NERSC-8 Use Case Scenarios technical report~\cite{TrinitySystem}.
 The simulated system consists of 18,936 compute nodes,
 e.g., 9,436 Intel Haswell nodes and 9,500 Intel Xeon Phi nodes.
 There are 576 burst buffer nodes with an aggregated 3.7 PB storage, which are globally accessible as the intermediate storage.
