--- a/related_works.tex
+++ b/related_works.tex
@@ -35,7 +35,7 @@ Our work is different from the existing research in the following ways.
 We target on intelligently assigning burst buffer as a new system resource to the submitted user jobs.
 In our scheduling model, users are encouraged to provide the burst buffer demand when submitting the jobs.
 Based on the possible usage cases of burst buffer, the execution of user jobs is modeled into three phases.
-The job could request different resources in each phase.
+The user jobs request different resources in each phase.
 We propose a new batch scheduler with burst buffer awareness, Cerberus,
 making scheduling decisions for jobs in each specific phase.
 Cerberus is also integrated with different optimization algorithms for the objectives of maximizing the resource utilization and the system throughput.
