--- a/background.tex
+++ b/background.tex
@@ -71,15 +71,14 @@ with extremely high speed (4.4-17.8 TB/s on Trinity);
 upon termination, jobs are also able to drain off output data
 asynchronously to the external parallel file system.
 The bursty I/O operations can thus be aggregated and absorbed into the burst buffer,
-which could shift the computation that follows the I/O bursts to an earlier moment,
+which shifts the computation that follows the I/O bursts to an earlier moment,
 while burst buffer nodes take charge of moving potentially TB-level volumes of data.
 There are more use cases for burst buffer nodes.
-Among them, \textit{data cache} could be equally important to enhance the responsiveness
+Among them, \textit{data cache} is equally important to enhance the responsiveness
 of applications by improving the perceived I/O bandwidth\cite{TrinitySystem}.
-Shared object library or read-only configuration files could be
-cached into burst buffer;
+Shared object library or read-only configuration files are cached into burst buffer;
 The list of input files specific to a group of compute nodes allocated to
-a particular job could be loaded into burst buffer prior to the execution;
+a particular job are loaded into burst buffer prior to the execution;
 Economical solid-state disks as a tier of burst buffer could also be used as
 out-of-core complement to insufficient main memory\cite{Romanus:CORR:15},
 working place for data analysis (reductions, feature extraction compression etc.)
@@ -111,7 +110,6 @@ and visualization\cite{TrinitySystem}.
 % % To our best knowledge, this is the first attempt to holistically schedule jobs running on novel burst buffer enabled storage architecture.
 
 
-%===========XY=============================
 %3. Motivate burst buffer aware scheduler
 Given the critical role of burst buffer in future HPC systems,
 users are encouraged to explicitly request this new resource for performance enhancement\cite{apex-workflow}.
@@ -120,7 +118,7 @@ the allocation of these precious I/O resources.
 This naturally falls into the responsibility of the batch scheduler.
 Unfortunately, existing schedulers are not aware of the burst buffer\cite{Moab, Cobalt}
 or they simply use the straightforward allocation policy, such as first-come first-served\cite{SlurmBBGuide}.
-This paper aims to bridge the two isolated fields of HPC architecture,
+This paper aims to bridge the two isolated fields of HPC architecture:
 the novel burst buffer equipped HPC IO subsystem and the
 traditional batch job queueing subsystem.
 The bridge builds upon a 3-phase job model that is motivated by critical use cases of burst buffer, i.e., application checkpoint restart and data pre-fetch/cache.
