--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,18 +1,18 @@
-\section{Conclusion and Future Work}
+\section{Conclusions}
 \label{Sec:Conclusion}
 
-We explore how the batch scheduler can efficiently allocate burst buffer to absorb three general types of IO operations:
-data staging in, application checkpointing, and data staging out.
-We propose a three-phase job model which is tailored to burst buffer's typical use cases.
-Burst-buffer-aware Cerberus is developed on the basis of the three-phase job model.
-We divide the scheduling problem into three sub-phases, and conquer them independently using dynamic programming based optimization.
-Simulation results show that Cerberus significantly improves both the application-level and the system-level performance.
+%We explore how the batch scheduler can efficiently allocate burst buffer to absorb three general types of IO operations:
+%data staging in, application checkpointing, and data staging out.
+%We propose a three-phase job model which is tailored to burst buffer's typical use cases.
+%Burst-buffer-aware Cerberus is developed on the basis of the three-phase job model.
+%We divide the scheduling problem into three sub-phases, and conquer them independently using dynamic programming based optimization.
+%Simulation results show that Cerberus significantly improves both the application-level and the system-level performance.
 
-%Since the burst buffer enabled system is not ready for the massive 
-%use by the community, 
-%there is no study about the burst buffer demand of the typical scientific workloads.
-We plan to study the optimal workload scheduling in Cerberus with diverse resource demands,
-which would provide useful insight for computing facilities to configure their burst buffer subsystems.
-We will also integrate optimization algorithms to Cerberus to satisfy various scheduling objectives.
-We also plan to make Cerberus more versatile to deal with new schedulable system resources.
-
+In this study, we have presented Cerberus, a three-phase burst-buffer-aware scheduling design.
+Our key contributions include a three-phase job model to describe user jobs
+and new optimization based methods for job scheduling at each phase.
+An event driven scheduling simulator named BBSim is developed for examining
+Cerberus on burst buffer enabled systems, which is freely available for the community.
+Our extensive trace based simulations demonstrate that
+Cerberus can significantly accelerate job execution,
+reduces job response time, and improves the average system throughput. 
