--- a/experiments.tex
+++ b/experiments.tex
@@ -14,7 +14,6 @@
 % Our newly developed event-driven simulator, BBSim, is used to simulating
 % the Trinity system described later.
 
-%==============XY===================
 We evaluate Cerberus through a series of experiments with BBSim.
 The experimental results give answers to the following three key questions.
 \begin{itemize}
@@ -30,9 +29,9 @@ The experimental results give answers to the following three key questions.
 Our experiments are based on trace-driven simulation.
 The Trinity system simulated by BBSim can be driven 
 by workload trace collected from production systems.
-However Trinity is not available to use at present, 
+Since Trinity is not available to use at present, 
 there is no workload traces from Trinity available for our study.
-Instead, we use the trace log collected from the Intrepid, a IBM Blue Gene/P system. 
+In this paper, we use the workload trace collected from the Intrepid, a IBM Blue Gene/P system. 
 The trace file contains 68,936 jobs
 submitted to the system from January to September in 2009~\cite{Tang:IPDPS:2010}.
 For each job, its log contains information such as submitted time, expected runtime, wait time, user ID, group ID, etc.
@@ -44,12 +43,13 @@ lower bound of 1 TB and a upper bound of 60 TB;
 $data\_in$ follows the uniform distribution between 1 GB and 30 GB~\cite{Liu:MSST:2012}.
 
 % metric
-We select three evaluation metrics, \textit{job response time}, \textit{job waiting time} and \textit{system throughput}.
+We use three commonly used scheduling evaluation metrics,
+\textit{job response time}, \textit{job waiting time} and \textit{system throughput}.
 Job response time is the time duration between the job submission and its completion,
 which is the major concern from user's perspective. 
-Job waiting time is the aggregated wait time that a job stays in each queue.
-On the other hands, system throughput, defined as the number of jobs finished in
-a fixed time period (500 seconds), measures the system performance.
+Job waiting time is the aggregated wait time that a job stays in all three queues.
+System throughput is defined as the number of jobs finished in
+a fixed time period (500 seconds).
 
 
 \subsection{Utilizing Burst Buffer Versus Direct IO}
@@ -58,16 +58,16 @@ a fixed time period (500 seconds), measures the system performance.
 We examine the scheduling performance when 
 jobs perform I/O operation in two different ways, 
 namely, \textit{utilizing burst buffer} and \textit{Direct IO}.
-In the Trinity architecture, PFS is mounted by all the compute nodes,
+In the Trinity architecture, parallel file system (PFS) is mounted by all the compute nodes,
 applications have the option to bypass the burst buffer 
 and to use the file system directly for their I/O operations.
 We refer this scenario as \textit{Direct IO}. 
 Apparently, the performance of \textit{Direct IO}
-is limited by the low bandwidth of the I/O nodes. 
-However, applications will be exempted from
-waiting in the stage-in and stage-out phases in 
-the case of \textit{Direct IO} rather than utilizing the burst buffer
-for I/O operations.
+is limited by the bandwidth of the I/O nodes. 
+%However, applications will be exempted from
+%waiting in the stage-in and stage-out phases in 
+%the case of \textit{Direct IO} rather than utilizing the burst buffer
+%for I/O operations.
 
 
 % Figure~\ref{Fig:DirectIOvsBBResponse} compares CDF of the response time of 1185 jobs.
@@ -84,10 +84,12 @@ for I/O operations.
 % traditional IO nodes and burst buffer nodes.
 
 %=============XY==============
-Figure~\ref{Fig:DirectIOvsBBResponse} compares CDF of the job response
+Figure~\ref{Fig:DirectIOvsBBResponse} compares CDFs of job response
 time on the burst-buffer-enabled system and the traditional system (Direct IO).
 For the burst-buffer-enabled system, the job response time is bounded by 376,443.12 seconds.
-However, the worst case of Direct IO is catastrophic, i.e., a job takes 889,239.20 seconds to finish, which is 2.36 times slower than the slowest non-responsive job
+However, the worst case of Direct IO is catastrophic, 
+i.e., a job takes 889,239.20 seconds to finish,
+which is 2.36 times slower than the slowest non-responsive job
 in the burst-buffer-enabled system.
 In average, \textit{nearly 99\%} of the jobs scheduled on the burst-buffer-enabled system
 response faster than the traditional system without burst buffer, since the burst buffer can mitigate the I/O gap between I/O nodes and compute nodes.
@@ -111,10 +113,10 @@ response faster than the traditional system without burst buffer, since the burs
 Figure~\ref{Fig:DirectIOvsBBWait} reveals the aggregated job waiting time.
 Note that in the case of Direct IO, jobs only request compute nodes.
 Thus, the waiting time is the duration between the job submission and the job starting time.
-The difference about the worst case waiting time in the both systems is drastic.
+The difference of the worst case waiting time in the both systems is drastic.
 On the system without burst buffer nodes, the waiting duration in the worst case is 3.02 times
-slower than the worst case in the burst-buffer-enabled system;
-the upper bound of the waiting duration for the burst buffer systems is about 285,254 seconds.
+slower than the worst case in the burst-buffer-enabled system.
+The upper bound of the waiting duration for the burst buffer systems is about 285,254 seconds.
 Because burst buffer has better ability to absorb checkpoint operations and data moving in/out,
 the execution pipeline of job series is significantly fast.
 Statistically, \textit{more than 80\% jobs have less waiting time if they utilize burst buffer.}
@@ -170,11 +172,12 @@ are significantly reduced, i.e., 272,741 and 376,026 seconds respectively.
         %\caption{System Throughput, IO Node Only vs. Burst Buffer System}
         %\label{Fig:DirectIOvsBBThroughput}
 %\end{figure}
-
-Based on the above comparison, we can answer question \textbf{Q1}: 
-\textit{by utilizing burst buffer nodes,
-both the job-level and system-level performance can be significantly improved.
-The execution of 99\% jobs will be expedited, 
+In short, the above experiments allow us to answer Q1.
+That is, \textit{the use of burst buffer can improve both system-level and job-level performance.}
+%Based on the above comparison, we can answer question \textbf{Q1}: 
+%by utilizing burst buffer nodes,
+%both the job-level and system-level performance can be significantly improved.
+\textit{The execution of 99\% jobs will be expedited, 
 80\% of jobs will suffer less wait time,
 and the average system throughput will be improved as much as 136\%.}
 
@@ -312,11 +315,11 @@ specifies data usage demand at each phase, e.g., 3-Phase-3D vs. 3-Phase-1D.}
 We now investigate the detailed waiting time to understand why the scheduling results in Cerberus
 are better than the naive integration of the batch scheduler with the burst buffer constraints.
 Figure~\ref{Fig:3Pvs1PWaitRun} shows the waiting running time, how long a job spent in the running queue.
-There are three queues in Cerberus;
+There are three queues in Cerberus.
 Correspondingly jobs in Cerberus have three kinds of waiting time: waiting input, waiting running, and waiting output time.
 %Figure~\ref{Fig:3Pvs1PWaitIn} shows the time job spend in inputing queue,
 %Figure~\ref{Fig:3Pvs1PWaitOut} the time job spend in outputing queue.
-For 1-phase-modeled jobs, there is just one queue;
+For 1-phase-modeled jobs, there is just one queue.
 Therefore, the waiting time in Figure~\ref{Fig:3Pvs1PWaitRun} is the total waiting time.
 We observe that (not shown in Figure~\ref{Fig:3Pvs1PWaitRun}) the jobs did not
 take much time either in the input queue $Q_I$ nor in the output queue.
@@ -433,7 +436,7 @@ Therefore, users are encouraged to provide detailed burst buffer demands in each
 \textit{the fine-grained three-phase scheduling could benefit both job-level and system-level performance.}
 
 
-\subsection{Cerberus Versus FCFS Three-Phase Scheduling}
+\subsection{Cerberus Versus Naive Three-phase Scheduling}
 %If we consider optimizing either burst buffer's data throughput or the parallelism across jobs,
 %dynamic programming based job scheduler can further reduce jobs' wait time.
 %We plot in Figure~\ref{Fig:DPvsFIFOResponse} the resulting response time of
@@ -456,22 +459,22 @@ Therefore, users are encouraged to provide detailed burst buffer demands in each
 %When we consider the overall response time of entire job set,
 %we see more than \textit{80\% of the tasks response faster when we do optimization}.
 
-%===========XY===============
-Cerberus can adopt various algorithms when scheduling jobs in each queue. 
+
+Cerberus adopts various algorithms when scheduling jobs in each queue. 
 The optimization algorithms presented in section \ref{SubSec:OptStageIn} and \ref{SubSec:OptRunning} are integrated in Cerberus. 
 In this section, we answer the question \textbf{Q3} by showing that
 adopting optimization in each scheduling phase can bring further improvement when
-compared with a naive first come first server (FCFS) three-phase scheduling design.
+compared with a naive first come first server three-phase scheduling design.
 Specifically, in the stage-in and stage-out phases, Cerberus schedules the jobs in $Q_I$ and $Q_O$
-according to the solution given by \equref{Equ:MaxTransferDataRecursion};
-for jobs in $Q_R$, Cerberus makes the scheduling decisions
+according to the solution given by \equref{Equ:MaxTransferDataRecursion}.
+For jobs in $Q_R$, Cerberus makes the scheduling decisions
 based on the solution given by \equref{Equ:MaxProductRecursion}. %Algorithm~\ref{Alg:MaxCPU}.
 We denote these two scheduling designs
-as \textbf{FCFS} and \textbf{Cerberus} respectively.
+as \textbf{Naive} and \textbf{Cerberus} respectively.
 
 As indicated by Figure~\ref{Fig:DPvsFIFOResponse}, the job response time scheduled by Cerberus is reduced.
 The most non-responsive job for Cerberus is job \#445, which takes 303,523 seconds to complete.
-In contrast, job \#445 takes 376,026 seconds to finish in FCFS.
+In contrast, job \#445 takes 376,026 seconds to finish in Naive.
 This is 19.28\% slower than the Cerberus.
 When we consider the overall response time of the entire job set,
 we observe that more than \textit{80\% of the jobs response faster when scheduled by Cerberus}.
@@ -482,8 +485,9 @@ is plotted in Figure~\ref{Fig:DPvsFIFOWaitRun}.
 The tail of Cerberus shows that a couple of jobs
 spend very long time in the running queue.
 This is because: First the jobs are submitted at the early middle phase
-(job \#435 waits for 268,322 seconds); Second, these jobs request a huge
-amount of compute nodes (10240), but comparably less amount of burst buffer (7 TB for job \#435);
+(job \#435 waits for 268,322 seconds).
+Second, these jobs request a huge
+amount of compute nodes (10240), but comparably less amount of burst buffer (7 TB for job \#435).
 Third, there are jobs requesting a large number of cores but requesting
 less running time and a larger amount of burst buffer.
 For example, job \#434 requests 10,240 compute nodes but the expected running time
@@ -500,14 +504,22 @@ it is possible for a user to cheat the scheduler with false demands.
 
 We can see the system throughputs under different scheduling objectives in Figure~\ref{Fig:DPvsFIFOThroughput} .
 When scheduled by Cerberus, it takes 303,940 seconds to finish the workload,
-while FCFS takes 376,443 seconds to complete the same workload.
-The worst case completion time improvement of Cerberus over FCFS is 19.26\%.
+while Naive takes 376,443 seconds to complete the same workload.
+The worst case completion time improvement of Cerberus over naive scheduler is 19.26\%.
 When we look at the time sequence of throughput,
 we found that the peak value 9 jobs / 500 seconds can be finished when scheduled by Cerberus.
-The peak throughput of the FCFS is also 9 jobs / 500 seconds.
-The mean throughputs of these three scheduling methods are plotted in Figure~\ref{Fig:DPvsFIFOThroughput}.
-Compared with the FCFS, \textit{the Cerberus achieves about 23.87\% higher average throughput}
-(1.951 jobs / 500 seconds).
+The peak throughput of the Naive is also 9 jobs / 500 seconds.
+
+The results in Figure~\ref{Fig:DPvsFIFOPerformance} answer question \textbf{Q3}: 
+when Cerberus adopts optimization algorithms to schedule jobs,
+the execution of 80\% jobs can be expedited; their wait time is also greatly reduced.
+In the meanwhile, as plotted in Figure~\ref{Fig:DPvsFIFOThroughput},
+\textit{Cerberus boots system throughput by as much as 23.87\%} (1.951 jobs / 500 seconds) in average.
+
+It is important to point out that
+though solving the optimization problem is theoretically NP-hard,
+memorization technique enables Cerberus to perform online job scheduling.
+In our simulation, it takes about 0.04 second in average for Cerberus to make a scheduling decision.
 
 
 %Table~\ref{Tab:OptimizationTime} demonstrate that 
@@ -534,13 +546,5 @@ Compared with the FCFS, \textit{the Cerberus achieves about 23.87\% higher avera
                 %\hline
         %\end{tabular}
 %\end{table}
-The results in Figure \ref{Fig:DPvsFIFOPerformance} answer question \textbf{Q3}: 
-when Cerberus adopts optimization algorithms to schedule jobs,
-the execution of 80\% jobs can be expedited, their wait time is also greatly reduced.
-In the meanwhile, system throughput is boosted by as much as 23.87\%.
-It is important to point out that
-though solving the optimization problem is theoretically NP-hard,
-memorization technique enables Cerberus to perform online job scheduling,
-In our simulation, it takes about 0.04 second in average for Cerberus to make a scheduling decision.
 
 
