--- a/model.tex
+++ b/model.tex
@@ -5,12 +5,13 @@
         \centering
         \includegraphics[width=3.6in]{CerberusBBSystem}
         \caption{The design of Three-Phase burst buffer aware scheduling. The black arrows indicate 
-        the jobs changing of status; the red, peru and blue arrows in the bottom indicate the data flow in different phases.}
+        the jobs changing of status; the red, brown and blue arrows in the bottom indicate the data flow in different phases.}
         \label{Fig:CerberusQueues}
 \end{figure}
 
 The traditional batch scheduler on a system without burst buffer only considers
-the job with the number of required nodes and the expected runtime for the scheduling decision making process.
+the job with the number of required nodes and the expected runtime
+for making the scheduling decisions.
 The most commonly used scheduling policy is the First Come First Serve with EASY backfilling~\cite{tsafrir-tpds-2007}.
 However, on burst-buffer-enabled systems,
 the amount of available burst buffer capacity becomes a new scheduling constraint.
@@ -20,17 +21,17 @@ we propose Cerberus, a burst-buffer-aware batch scheduler.
 We assume that upon job submission, 
 a user specifies the amount of compute nodes, 
 the expected job runtime, 
-and the amount of burst buffer needed by his/her job. 
+and the amount of burst buffer needed by her job. 
 Cerberus makes scheduling decisions based on the most common use cases of burst buffer:
-data stage-in, checkpointing, and data drain-out.
-Cerberus can allocate burst buffer to each job with regard to its use cases
+data stage-in, checkpointing, and data stage-out.
+Cerberus allocates burst buffer to each job with regard to its use cases
 by maintaining three distinct queues, as shown in Figure~\ref{Fig:CerberusQueues}.
 The input queue $Q_I$ contains all the jobs that need to prefetch data from the external storage to the burst buffer.
 The running queue $Q_R$ holds the jobs that are waiting for the compute nodes and the burst buffer used for checkpointing.
 Jobs waiting to be drained out to the external permanent storage are in the output queue $Q_O$.
 The layered hierarchy in Figure~\ref{Fig:CerberusQueues} also indicates that burst buffer
 can fill in the memory gap between the memory on compute nodes and the hard disk storage.
-Cerberus coordinates among three queues and makes scheduling decisions according to job requirements in each queue with the objective to maximize job performance and system utilization.
+Cerberus coordinates three queues and makes scheduling decisions according to job requirements in each queue with the objective to maximize job performance and system utilization.
 
 Before we give the details of our Cerberus design, 
 in this section we describe our three-phase job model 
@@ -140,9 +141,10 @@ $bb\_run$ is for checkpointing during the execution, and
 $bb\_out$ is for staging out the output data.
 % A job that providing demand vector augmented with
 % burst buffer triple is called a \textit{3-phase modeled job}.
-We will show the benefits of providing the job burst buffer demand in the form of \textit{burst buffer triple} in the next section.
+We will show the benefits of providing the job burst buffer demand in the form of \textit{burst buffer triple} in Section~\ref{Sec:Experiments}.
 Alternatively, a user may just use the $\max\{bb\_in, bb\_run, bb\_out\}$
 as the job's burst buffer demand in the whole lifetime.
+Table~\ref{Tab:Symbols} summarizes the meaning of symbols used in this paper.
 % We refer this augmentation as
 % \textit{1-phase modeled jobs} thereafter.
 
