--- a/scheduler.tex
+++ b/scheduler.tex
@@ -28,30 +28,34 @@
 %The layered hierarchy in Figure~\ref{Fig:CerberusQueues} also indicates that burst buffer
 %can fill in the memory gap between the memory on compute nodes and the hard disk storage.
 
-As shown in Figure 1, Cerberus adopts a three-phase job scheduling strategy. 
-In order to help understand Cerberus design, we illustrate job state transition in Figure 2.
+As shown in Figure 1, Cerberus adopts a three-phase job scheduling strategy.
 To see how Cerberus schedules a particular job by coordinating three queues,
 we present the job transition diagram in Figure~\ref{Fig:JobFSM}.
 After the submission, a job enters $Q_I$ waiting for the stage-in-purpose burst buffer ($BB_{in}$).
 Once selected by Cerberus, the job is removed from $Q_I$ and start to stage in data.
 After finishing the stage-in phase, the job is enqueued to $Q_R$,
 where it waits for the required compute nodes and the \textit{new} burst buffer for checkpointing purpose ($BB_{run}$).
-Note that $BB_{in}$ still held by the job at this time point. When Cerberus chooses the job from $Q_R$, the job is in the running phase.
-The first thing is to release $BB_{in}$ after \textbf{fetching in} data to memory of the acquired compute nodes.
+Note that $BB_{in}$ is still held by the job at this time point.
+When Cerberus chooses the job from $Q_R$, the job will be put to the running phase.
+
+The first thing to do in running phase is to release $BB_{in}$ after
+\textbf{fetching in} data to the memory of the acquired compute nodes.
 During the execution, checkpointing and application restart may occur frequently,
 which essentially means frequent data exchanges between the memory and the burst buffer $BB_{run}$.
 Once the job execution finishes, $BB_{run}$ can be immediately released since
 output data are still available on the compute nodes.
 Without releasing the compute nodes, the job enters $Q_O$ and waits for a certain amount of burst buffer for staging out its data ($BB_{out}$).
-Once a job is chosen by Cerberus, its data flow from the main memory to the burst buffer
-in the \textbf{drain-out} phase, after which all the compute nodes can be released;
-then the burst buffer nodes are responsible for transferring the output data to the external storage.
+
+Once a job in $Q_O$ is chosen by Cerberus, its data flow from the main memory to the burst buffer
+in the \textbf{drain-out} phase, after which all the compute nodes can be released.
+Then the burst buffer nodes are responsible for transferring the output data to the external storage.
 The job completes when all its data are staged out and $BB_{out}$ are returned to system.
 As indicated by Figure~\ref{Fig:JobFSM}, the resource release at anytime can trigger Cerberus
 to schedule jobs in those three queues.
 
-The three-phase job model divides the jobs to generic phases with very specific resource demands.
-Cerberus conquers the scheduling problem in each phase, and the detailed decision making is described in Section~\ref{SubSec:OptStageIn}-\ref{SubSec:OptStageOut}.
+Cerberus conquers the scheduling problem in each phase.
+The details of how Cerberus makes scheduling decisions are
+described in Section~\ref{SubSec:OptStageIn}-\ref{SubSec:OptStageOut}.
 %The fine scheduling granularity enables the full utilization of burst buffer for different purposes.
 %The divide-conquer approach provides a framework that can be extended to various scheduling
 %policies for each individual phase.
@@ -59,24 +63,25 @@ Cerberus conquers the scheduling problem in each phase, and the detailed decisio
 
 \subsection{Three-Phase Coordination}
 The three phases together with the corresponding queues, are not entirely independent.
-First, only after finishing the stage-in phase can a job be ready for running;
-similarly, only when finishing the running phase can a job waiting or entering the stage-out phase.
+First, only after finishing the stage-in phase can a job be ready for running.
+Similarly, only when finishing the running phase can a job waiting or entering the stage-out phase.
 This is reflected in the lifetime of a job's execution.
 
-Secondly,  the burst buffer demand of any job before entering any phase can only be used for a single purpose.
+Secondly, the burst buffer of any job used at any phase can only be used for a single purpose.
 For example, a running-phase job cannot hold its already taken burst buffer
-and to enter stage-out phase upon finishing the running, regardless whether the holding burst buffer has sufficient capacity.
+and to enter stage-out phase upon finishing the running phase,
+regardless whether the holding burst buffer has sufficient capacity.
 In Cerberus, the resource release is mandatory as specified in Figure~\ref{Fig:JobFSM}.
 We believe that frequent releases provide more opportunities to involve the scheduler in each phase for scheduling the jobs.
 
-At last, it is possible that all the three queues are not empty at the moment of scheduling.
+Finally, it is possible that none of three queues are empty at the moment of a scheduling instance.
 We choose a heuristic strategy to determine the scheduling order when
 Cerberus has to handle multiple queues at the same time.
 Note that jobs finishing the \textit{running} and the \textit{stage-out} phases
 will (partially) release the resources, and we set the priority of queues to be $priority(Q_O) > priority(Q_R) > priority(Q_I)$.
 This greedy heuristic works well when the demand of the jobs in $J_{Q_I}$ is low.
 However, it is possible to make jobs stacking up at the entry of the system.
-We plan to investigate this interesting problem in the future.
+The design of such a job stacking is part of our future work.
 
 
 
@@ -85,7 +90,8 @@ We plan to investigate this interesting problem in the future.
 
 In the stage-in phase, jobs require only the burst buffer.
 Cerberus schedules the jobs in $Q_I$ based on their burst buffer demands $bb\_in$.
-To maximize burst buffer's utilization, one can schedule the jobs according to the following optimization:
+To maximize burst buffer's utilization, Cerberus schedules the jobs
+according to the following optimization:
 \begin{align*}
         \mathbf{Problem} & \text{ } \mathbf{1} \\
         \max &\sum_{i\in J_{Q_I}} bb\_in_i \cdot x_i \\
@@ -106,15 +112,14 @@ To maximize burst buffer's utilization, one can schedule the jobs according to t
                 %%\end{array} 
         %%\right.
 %\end{align*}
-where $J_{Q_I}$ stands for all jobs in the input queue,
+where $J_{Q_I}$ contains all the jobs in the input queue,
 $bb\_in_i$ is the burst buffer demand of $job_i$,
-$BB_{available}$ is the system's current available capacity of the burst buffer.
+$BB_{available}$ is the available capacity of the burst buffer at the moment.
 We denote the set of jobs that achieve the maximum data transfer throughput as
-$\mathcal{J} = \{x_i|x_i = 1, \text{ } \forall i \in J_{Q_I}\}$.
+$\mathcal{J} = \{i|x_i = 1, \text{ } \forall i \in J_{Q_I}\}$.
 
-It is trivial to show that the optimization of Problem 1
-is equivalent to the 0-1 knapsack problem, which is NP-hard.
-We use dynamic programming to solve it in pseudo-polynomial time.
+Problem 1 is equivalent to the 0-1 knapsack problem, which is NP-complete.
+It can be solved in pseudo-polynomial time through dynamic programming.
 Memorization technique is applied in order to accelerate the solving process.
 The recursive relationship used in our solution is given by \equref{Equ:MaxTransferDataRecursion}.
 The time complexity of solving \equref{Equ:MaxTransferDataRecursion} and 
@@ -133,7 +138,7 @@ in $Q_R$ as it uses $c_i$ compute nodes and $bb\_run_i$ amount of the burst buff
 \end{equation}
 where $ert_i$ is the expected running time of $job_i$.
 
-Similar to the 0-1 knapsack problem, the objective is to maximize the total profit of jobs in the running queue, formularized as
+Cerberus's objective is to maximize the total profit of jobs in the running queue, formularized as
 \begin{align*}
         \mathbf{Problem} & \text{ } \mathbf{2} \\
         \max &\sum_{i \in J_{Q_R}} p_i \cdot x_i \\
@@ -145,18 +150,20 @@ Similar to the 0-1 knapsack problem, the objective is to maximize the total prof
                 \end{array} 
         \right.
 \end{align*}
-where $J_{Q_R}$ is the set of jobs in the running queue,
+where $J_{Q_R}$ contains all the jobs in the running queue,
 $CN_{available}$ and $BB_{available}$ represent the amount of system's current available resources.
 We denote the set of jobs who have the maximum profit as
-$\mathcal{J}  = \{x_i|x_i=1, \text{ } \forall i \in J_{Q_R}\}$.
+$\mathcal{J}  = \{i|x_i=1, \text{ } \forall i \in J_{Q_R}\}$.
 
-As an example, we measure the value of a job based on how efficient one utilize its resource:
+As an example, we measure the value of a job based on how efficient one utilizes its resource:
 \begin{equation}
         p_i = \frac{c_i / CN}{ert_i} \times \frac{bb\_run_i / BB}{ert_i}
         \label{Equ:DefValue}
 \end{equation}
-Here, efficiency is measured as the ratio of the job resource demand to the expected job running time,
-where the share of the requested compute nodes ($c_i/CN$) and the burst buffer ($bb\_run/BB$) are used to
+In \equref{Equ:DefValue}, efficiency is measured as the ratio
+of the job resource demand to the expected job running time,
+where the share of the requested compute nodes ($c_i/CN$) and
+the share of the requested burst buffer ($bb\_run/BB$) are used to
 represent the demand size.
 Specializing Problem 2 using \equref{Equ:DefValue} in fact favors tasks that claim to take up the resources with a short duration, as we will discuss in Section~\ref{Sec:Experiments}.
 %\begin{align*}
@@ -171,8 +178,9 @@ Specializing Problem 2 using \equref{Equ:DefValue} in fact favors tasks that cla
 %\end{align*}
 
 
-Problem 2 can be informally treat as the two-dimension 0-1 knapsack problem, which is also NP-hard.
-We use the same dynamic programming skill to solve Problem 2, the recursion is given by \equref{Equ:MaxProductRecursion}.
+Problem 2 can be informally treat as the two-dimension 0-1 knapsack problem.
+We use the same dynamic programming skill to solve Problem 2.
+The recursion is given by \equref{Equ:MaxProductRecursion}.
 The time complexity of solving \equref{Equ:MaxProductRecursion} and selecting $\mathcal{J}_{Q_R}$ with memorization technique is $O(n\times CN\times BB)$.
 
 
@@ -180,7 +188,7 @@ The time complexity of solving \equref{Equ:MaxProductRecursion} and selecting $\
 \label{SubSec:OptStageOut}
 
 The stage-out phase scheduling is designed based on the value of $bb\_out$ of the jobs in $Q_O$.
-The optimization formula for the stage-out phase is similar as in Problem 1, 
+The optimization formula for the stage-out phase is the same as Problem 1, 
 except that $bb\_in_i$ is replaced with $bb\_out_i$, 
 and $J_{Q_I}$ is replaced with $J_{Q_O}$, the job set of output queue.
 
