--- a/background.tex
+++ b/background.tex
@@ -1,5 +1,6 @@
 \section{Background and Motivation}
 \label{Sec:Background}
+
 % % %1. The appear of burst buffer
 % % Burst buffer enabled IO architecture can help catch up with
 % % the ever-increasing computational performance and parallelism of HPC system.
@@ -20,7 +21,7 @@
 %1. The appear of burst buffer
 Burst buffer enabled I/O architecture can help alleviate
 the ever-increasing I/O pressure on HPC systems.
-Burst buffer nodes debut as a rescue by utilizing various new storage technologies,
+It debuts as a rescue by utilizing various new storage technologies,
 such as non-volatile random-access memory (NVRAM) and solid state drive (SSD).
 In practice, burst buffer suits up with DataWarp I/O accelerator\cite{DataWarp}.
 Figure \ref{Fig:BBArchitecture} illustrates one burst-buffer-enabled architecture,
@@ -60,7 +61,7 @@ Burst buffer may also be utilized as the intermediate storage systems.
 
 
 %2. Use cases of burst buffer
-Regardless of the specific implementation, burst buffer nodes essentially augment
+Regardless of the specific deployment, burst buffer nodes essentially augment
 the I/O stack with an intermediate productive offloading layer, 
 which can benefit jobs in multiple ways.
 As discussed in some preliminary surveys\cite{apex-workflow} ,
@@ -69,7 +70,7 @@ before the previous job terminates;
 jobs can burst checkpoint to burst buffer
 with extremely high speed (4.4-17.8 TB/s on Trinity);
 upon termination, jobs are also able to drain off output data
-asynchronously to the external parallel file system.
+asynchronously to the external parallel file system (PFS).
 The bursty I/O operations can thus be aggregated and absorbed into the burst buffer,
 which shifts the computation that follows the I/O bursts to an earlier moment,
 while burst buffer nodes take charge of moving potentially TB-level volumes of data.
@@ -77,11 +78,11 @@ There are more use cases for burst buffer nodes.
 Among them, \textit{data cache} is equally important to enhance the responsiveness
 of applications by improving the perceived I/O bandwidth\cite{TrinitySystem}.
 Shared object library or read-only configuration files are cached into burst buffer;
-The list of input files specific to a group of compute nodes allocated to
-a particular job are loaded into burst buffer prior to the execution;
+the list of input files specific to a group of compute nodes allocated to
+a particular job are loaded into burst buffer prior to the execution.
 Economical solid-state disks as a tier of burst buffer could also be used as
 out-of-core complement to insufficient main memory\cite{Romanus:CORR:15},
-working place for data analysis (reductions, feature extraction compression etc.)
+or working place for data analysis (reductions, feature extraction compression etc.)
 and visualization\cite{TrinitySystem}.
 
 
@@ -114,24 +115,21 @@ and visualization\cite{TrinitySystem}.
 Given the critical role of burst buffer in future HPC systems,
 users are encouraged to explicitly request this new resource for performance enhancement\cite{apex-workflow}.
 Inspired by this requirement, it is necessary to holistically manage
-the allocation of these precious I/O resources.
-This naturally falls into the responsibility of the batch scheduler.
+the allocation of these precious I/O resources,
+which naturally falls into the responsibilities of the batch scheduler.
 Unfortunately, existing schedulers are not aware of the burst buffer\cite{Moab, Cobalt}
 or they simply use the straightforward allocation policy, such as first-come first-served\cite{SlurmBBGuide}.
 This paper aims to bridge the two isolated fields of HPC architecture:
 the novel burst buffer equipped HPC IO subsystem and the
 traditional batch job queueing subsystem.
-The bridge builds upon a 3-phase job model that is motivated by critical use cases of burst buffer, i.e., application checkpoint restart and data pre-fetch/cache.
+The bridge builds upon a three-phase job model motivated by critical use cases of burst buffer,
+i.e., application checkpoint restart and data pre-fetch/cache.
 
 In this work, we demonstrate that when burst buffer is intelligently allocated 
 by our novel batch scheduler, the benefit is far beyond the higher transfer bandwidth.
 The job execution is expedited by having their bursty checkpoint-purpose I/O requests
 absorbed by burst buffer. The job waiting time is reduced via the contracted input/output stage in the scheduling pipeline.
 To our best knowledge, this is the first attempt to holistically schedule jobs running on the new burst-buffer-enabled HPC systems.
-
-
-
-
 
 %4. Contribution summary and paper structure
 %Our contributions in this paper are summarized as follows:
